@@ -25,6 +25,7 @@ Version 1.3.beta2 (2011-??-??)
 - Fixed product translations not working (Ticket #448)
 - Fixed quotes in "remove from cart" title (Ticket #478)
 - Fixed request token issues in Isotope javascript class
+- Fixed template search in theme folders (Ticket #467)
 - Started using static functions if they don't need the class (see IsotopeFrontend)
 
 Version 1.3.beta1 (2011-07-18)
